--- a/beast-gtk/TODO
+++ b/beast-gtk/TODO
@@ -1,16 +1,13 @@
 general:
+-	use subwindow for bsepatterdialog
 -	item view should use destroy notification for bse container
 -	need -Wshadow
 -	need file-exists dialog
 -	get File/Save to work
 -	quit/close needs to feature mod-time vs. creation-time handling
--	reevaluate bstmaster if project+master are merged
--	feature "Dirty updates", i.e. fill buffer in emission hooks
-	candidates: ::parent_set ::show ::destroy, since most lags happen
-	during widget building phase
 
 instrument editor:
-prehearse fuctionality with spinner to indicate note
+-	prehearse fuctionality with spinner to indicate note
 
 sample repo:
 -	this needs to be moved into BSE in a clean fashion
@@ -20,14 +17,12 @@ Procedure dialog:
 	last-dialog keeping of bststatusbar)!
 -	figure work around for button is hidden while depressed bug.
 
-File Dialog
--	need FILE-EXISTS handling
-
 Pattern Editor
 -	the popup menu should be attached/detached instead of the ref/sink pair
 -	feature pattern params
--	user configurable toggle to start from 000 or 001
--	per channel mute. per channel in-use flag (active when any note or instr or eff)
+-	user configurable toggle to start from 000 or 001 for row numbering
+-	per channel mute. per channel in-use flag (bg-color?) (active when any note or instr or eff)
+
 instrument editor
 -	update the samples in the combo popup...
 -	sample fetching needs to be moved back into BSE anyways
