--- a/beast-gtk/TODO
+++ b/beast-gtk/TODO
@@ -1,3 +1,9 @@
+important:
+-	document pattern keys
+-	sane default sizes for windows
+-	write up basic blurb 1)new song 2) instrument+sample 3) pattern etc..
+-	how to get instruments going in a pattern
+
 general:
 -	use subwindow for bsepatterdialog
 -	item view should use destroy notification for bse container
