--- a/docs/faq.txt
+++ b/docs/faq.txt
@@ -1,3 +1,16 @@
+ BEAST/BSE FAQ
+================
+
+Contacts:
+WWW:
+	http://beast.gtk.org
+FTP:
+	ftp://beast.gtk.org/pub/beast
+MAILING LIST:
+	beast@beast.gtk.org
+	send subscription requests to timj@beast.gtk.org
+
+
 1) Upon startup, BEAST sometimes crashes with a segmentation fault
 
   This is due to a bug in the X Keyboard extension. BEAST tries to figure
@@ -9,4 +22,20 @@
 2) I get "Cannot access memory at address 0x706f6e6d" when running BEAST in gdb
 
   Some versions of gdb have problems figuring dynamic plugins, we can only
-  hope that this is going to be fixed some time soon.
+  hope that this is going to be fixed some time soon. Newer versions of gdb
+  may already figure what's going on with the plugins if you simply restart
+  BEAST within gdb.
+
+3) I can't get the synthesis networks to work /
+   Loading of ./test/osc-test.bse fails / Upon startup i get:
+   BEAST-WARNING **: strange, can't find any plugins, please check .../plugins
+
+  BEAST loads its plugins from some common installation directory, it
+  therefore needs to be properly installed before you can make use of
+  its plugins, simply starting it from within the built directory is not
+  sufficient.
+
+4) I can't get BEAST to load my .wav, .aiff, .something sample files
+
+  Import functionality for foreign sample types is currently being worked
+  on, if you'd like to assist this process, send email to beast@beast.gtk.org.
