--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Jan 13 19:10:19 2000  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstmain.c (main): 
+	* beast-gtk/bstgconfig.[hc]: added debugging ability to disable
+	ALSA driver (since we give it precedence over OSS), so the OSS
+	code can be tested with ALSA's OSS emulation.
+
 Wed Jan 12 23:51:23 2000  Tim Janik  <timj@gtk.org>
 
         * beast-gtk/bstparam.c (bst_param_apply):
