incorporated changes from Dave Seidel <dave@superluminal.com>: # 14 Jan
Sun Jan 16 00:24:31 2000  Tim Janik  <timj@gtk.org>

        * docs/Makefile.am:
        * docs/makefaq.py: incorporated changes from Dave Seidel
        <dave@superluminal.com>:
        # 14 Jan 2000 - added command line processing, error handling,
        #               comments

Sat Jan 15 23:54:40 2000  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnetrouter.c (toolbar_add_radio): instead of stripping
        "Bse" from the toolbar buttons, strip any kind of namespace prefix.

svn path=/trunk/; revision=162

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+
+* New synthesis modules:
+  BseMixer - mix 4->1 channels with adjustable volumes
+  DavOrgan - a modifiable Additive Organ Synthesizer
+* More test files in the test/ subdirectory ;)
+
 Overview of Changes in BEAST/BSE 0.3.1:
 
 * Fixed a dumb major bug in the ALSA backend that could prevent
