--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Sun Jan 16 00:24:31 2000  Tim Janik  <timj@gtk.org>
+
+	* docs/Makefile.am:
+	* docs/makefaq.py: incorporated changes from Dave Seidel
+	<dave@superluminal.com>:
+	# 14 Jan 2000 - added command line processing, error handling,
+	#               comments
+
+Sat Jan 15 23:54:40 2000  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsnetrouter.c (toolbar_add_radio): instead of stripping
+	"Bse" from the toolbar buttons, strip any kind of namespace prefix.
+
 Sat Jan 15 20:03:19 2000  Tim Janik  <timj@gtk.org>
 
 	* test/bsemixer-test.bse: synthesis network to test the new
